src/parser/sparta_parser.go
// Code generated from Sparta.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // Sparta

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", "'repeat'",
	"'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", "','", "'in'",
	"'function'", "'local'", "'return'", "'::'", "'.'", "':'", "'nil'", "'false'",
	"'true'", "'...'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'or'", "'and'",
	"'<'", "'>'", "'<='", "'>='", "'~='", "'=='", "'..'", "'+'", "'-'", "'*'",
	"'/'", "'%'", "'//'", "'&'", "'|'", "'~'", "'<<'", "'>>'", "'not'", "'#'",
	"'^'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX",
	"FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", "SHEBANG",
}

var ruleNames = []string{
	"chunk", "block", "stat", "retstat", "label", "funcname", "varlist", "namelist",
	"explist", "exp", "prefixexp", "functioncall", "varOrExp", "var1", "varSuffix",
	"nameAndArgs", "args", "functiondef", "funcbody", "parlist", "tableconstructor",
	"fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison",
	"operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorBitwise",
	"operatorUnary", "operatorPower", "number", "string1",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SpartaParser struct {
	*antlr.BaseParser
}

func NewSpartaParser(input antlr.TokenStream) *SpartaParser {
	this := new(SpartaParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Sparta.g4"

	return this
}

// SpartaParser tokens.
const (
	SpartaParserEOF          = antlr.TokenEOF
	SpartaParserT__0         = 1
	SpartaParserT__1         = 2
	SpartaParserT__2         = 3
	SpartaParserT__3         = 4
	SpartaParserT__4         = 5
	SpartaParserT__5         = 6
	SpartaParserT__6         = 7
	SpartaParserT__7         = 8
	SpartaParserT__8         = 9
	SpartaParserT__9         = 10
	SpartaParserT__10        = 11
	SpartaParserT__11        = 12
	SpartaParserT__12        = 13
	SpartaParserT__13        = 14
	SpartaParserT__14        = 15
	SpartaParserT__15        = 16
	SpartaParserT__16        = 17
	SpartaParserT__17        = 18
	SpartaParserT__18        = 19
	SpartaParserT__19        = 20
	SpartaParserT__20        = 21
	SpartaParserT__21        = 22
	SpartaParserT__22        = 23
	SpartaParserT__23        = 24
	SpartaParserT__24        = 25
	SpartaParserT__25        = 26
	SpartaParserT__26        = 27
	SpartaParserT__27        = 28
	SpartaParserT__28        = 29
	SpartaParserT__29        = 30
	SpartaParserT__30        = 31
	SpartaParserT__31        = 32
	SpartaParserT__32        = 33
	SpartaParserT__33        = 34
	SpartaParserT__34        = 35
	SpartaParserT__35        = 36
	SpartaParserT__36        = 37
	SpartaParserT__37        = 38
	SpartaParserT__38        = 39
	SpartaParserT__39        = 40
	SpartaParserT__40        = 41
	SpartaParserT__41        = 42
	SpartaParserT__42        = 43
	SpartaParserT__43        = 44
	SpartaParserT__44        = 45
	SpartaParserT__45        = 46
	SpartaParserT__46        = 47
	SpartaParserT__47        = 48
	SpartaParserT__48        = 49
	SpartaParserT__49        = 50
	SpartaParserT__50        = 51
	SpartaParserT__51        = 52
	SpartaParserT__52        = 53
	SpartaParserT__53        = 54
	SpartaParserT__54        = 55
	SpartaParserNAME         = 56
	SpartaParserNORMALSTRING = 57
	SpartaParserCHARSTRING   = 58
	SpartaParserLONGSTRING   = 59
	SpartaParserINT          = 60
	SpartaParserHEX          = 61
	SpartaParserFLOAT        = 62
	SpartaParserHEX_FLOAT    = 63
	SpartaParserCOMMENT      = 64
	SpartaParserLINE_COMMENT = 65
	SpartaParserWS           = 66
	SpartaParserSHEBANG      = 67
)

// SpartaParser rules.
const (
	SpartaParserRULE_chunk              = 0
	SpartaParserRULE_block              = 1
	SpartaParserRULE_stat               = 2
	SpartaParserRULE_retstat            = 3
	SpartaParserRULE_label              = 4
	SpartaParserRULE_funcname           = 5
	SpartaParserRULE_varlist            = 6
	SpartaParserRULE_namelist           = 7
	SpartaParserRULE_explist            = 8
	SpartaParserRULE_exp                = 9
	SpartaParserRULE_prefixexp          = 10
	SpartaParserRULE_functioncall       = 11
	SpartaParserRULE_varOrExp           = 12
	SpartaParserRULE_var1               = 13
	SpartaParserRULE_varSuffix          = 14
	SpartaParserRULE_nameAndArgs        = 15
	SpartaParserRULE_args               = 16
	SpartaParserRULE_functiondef        = 17
	SpartaParserRULE_funcbody           = 18
	SpartaParserRULE_parlist            = 19
	SpartaParserRULE_tableconstructor   = 20
	SpartaParserRULE_fieldlist          = 21
	SpartaParserRULE_field              = 22
	SpartaParserRULE_fieldsep           = 23
	SpartaParserRULE_operatorOr         = 24
	SpartaParserRULE_operatorAnd        = 25
	SpartaParserRULE_operatorComparison = 26
	SpartaParserRULE_operatorStrcat     = 27
	SpartaParserRULE_operatorAddSub     = 28
	SpartaParserRULE_operatorMulDivMod  = 29
	SpartaParserRULE_operatorBitwise    = 30
	SpartaParserRULE_operatorUnary      = 31
	SpartaParserRULE_operatorPower      = 32
	SpartaParserRULE_number             = 33
	SpartaParserRULE_string1            = 34
)

// IChunkContext is an interface to support dynamic dispatch.
type IChunkContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsChunkContext differentiates from other interfaces.
	IsChunkContext()
}

type ChunkContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyChunkContext() *ChunkContext {
	var p = new(ChunkContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpartaParserRULE_chunk
	return p
}

func (*ChunkContext) IsChunkContext() {}

func NewChunkContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ChunkContext {
	var p = new(ChunkContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpartaParserRULE_chunk

	return p
}

func (s *ChunkContext) GetParser() antlr.Parser { return s.parser }

func (s *ChunkContext) Block() IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ChunkContext) EOF() antlr.TerminalNode {
	return s.GetToken(SpartaParserEOF, 0)
}

func (s *ChunkContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ChunkContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ChunkContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.EnterChunk(s)
	}
}

func (s *ChunkContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.ExitChunk(s)
	}
}

func (p *SpartaParser) Chunk() (localctx IChunkContext) {
	localctx = NewChunkContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SpartaParserRULE_chunk)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Block()
	}
	{
		p.SetState(71)
		p.Match(SpartaParserEOF)
	}

	return localctx
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpartaParserRULE_block
	return p
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpartaParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) AllStat() []IStatContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatContext)(nil)).Elem())
	var tst = make([]IStatContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatContext)
		}
	}

	return tst
}

func (s *BlockContext) Stat(i int) IStatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatContext)
}

func (s *BlockContext) Retstat() IRetstatContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRetstatContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRetstatContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.EnterBlock(s)
	}
}

func (s *BlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.ExitBlock(s)
	}
}

func (p *SpartaParser) Block() (localctx IBlockContext) {
	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SpartaParserRULE_block)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SpartaParserT__0)|(1<<SpartaParserT__2)|(1<<SpartaParserT__3)|(1<<SpartaParserT__4)|(1<<SpartaParserT__6)|(1<<SpartaParserT__7)|(1<<SpartaParserT__9)|(1<<SpartaParserT__13)|(1<<SpartaParserT__16)|(1<<SpartaParserT__17)|(1<<SpartaParserT__19)|(1<<SpartaParserT__26))) != 0) || _la == SpartaParserNAME {
		{
			p.SetState(73)
			p.Stat()
		}

		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == SpartaParserT__18 {
		{
			p.SetState(79)
			p.Retstat()
		}

	}

	return localctx
}

// IStatContext is an interface to support dynamic dispatch.
type IStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatContext differentiates from other interfaces.
	IsStatContext()
}

type StatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatContext() *StatContext {
	var p = new(StatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpartaParserRULE_stat
	return p
}

func (*StatContext) IsStatContext() {}

func NewStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatContext {
	var p = new(StatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpartaParserRULE_stat

	return p
}

func (s *StatContext) GetParser() antlr.Parser { return s.parser }

func (s *StatContext) Varlist() IVarlistContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVarlistContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVarlistContext)
}

func (s *StatContext) Explist() IExplistContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExplistContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExplistContext)
}

func (s *StatContext) Functioncall() IFunctioncallContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctioncallContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFunctioncallContext)
}

func (s *StatContext) Label() ILabelContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILabelContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ILabelContext)
}

func (s *StatContext) NAME() antlr.TerminalNode {
	return s.GetToken(SpartaParserNAME, 0)
}

func (s *StatContext) AllBlock() []IBlockContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IBlockContext)(nil)).Elem())
	var tst = make([]IBlockContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IBlockContext)
		}
	}

	return tst
}

func (s *StatContext) Block(i int) IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *StatContext) AllExp() []IExpContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExpContext)(nil)).Elem())
	var tst = make([]IExpContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExpContext)
		}
	}

	return tst
}

func (s *StatContext) Exp(i int) IExpContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExpContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *StatContext) Namelist() INamelistContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INamelistContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INamelistContext)
}

func (s *StatContext) Funcname() IFuncnameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncnameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncnameContext)
}

func (s *StatContext) Funcbody() IFuncbodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncbodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncbodyContext)
}

func (s *StatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.EnterStat(s)
	}
}

func (s *StatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.ExitStat(s)
	}
}

func (p *SpartaParser) Stat() (localctx IStatContext) {
	localctx = NewStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SpartaParserRULE_stat)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(163)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(82)
			p.Match(SpartaParserT__0)
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(83)
			p.Varlist()
		}
		{
			p.SetState(84)
			p.Match(SpartaParserT__1)
		}
		{
			p.SetState(85)
			p.Explist()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(87)
			p.Functioncall()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(88)
			p.Label()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(89)
			p.Match(SpartaParserT__2)
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(90)
			p.Match(SpartaParserT__3)
		}
		{
			p.SetState(91)
			p.Match(SpartaParserNAME)
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(92)
			p.Match(SpartaParserT__4)
		}
		{
			p.SetState(93)
			p.Block()
		}
		{
			p.SetState(94)
			p.Match(SpartaParserT__5)
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(96)
			p.Match(SpartaParserT__6)
		}
		{
			p.SetState(97)
			p.exp(0)
		}
		{
			p.SetState(98)
			p.Match(SpartaParserT__4)
		}
		{
			p.SetState(99)
			p.Block()
		}
		{
			p.SetState(100)
			p.Match(SpartaParserT__5)
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(102)
			p.Match(SpartaParserT__7)
		}
		{
			p.SetState(103)
			p.Block()
		}
		{
			p.SetState(104)
			p.Match(SpartaParserT__8)
		}
		{
			p.SetState(105)
			p.exp(0)
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(107)
			p.Match(SpartaParserT__9)
		}
		{
			p.SetState(108)
			p.exp(0)
		}
		{
			p.SetState(109)
			p.Match(SpartaParserT__10)
		}
		{
			p.SetState(110)
			p.Block()
		}
		p.SetState(118)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == SpartaParserT__11 {
			{
				p.SetState(111)
				p.Match(SpartaParserT__11)
			}
			{
				p.SetState(112)
				p.exp(0)
			}
			{
				p.SetState(113)
				p.Match(SpartaParserT__10)
			}
			{
				p.SetState(114)
				p.Block()
			}

			p.SetState(120)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		p.SetState(123)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == SpartaParserT__12 {
			{
				p.SetState(121)
				p.Match(SpartaParserT__12)
			}
			{
				p.SetState(122)
				p.Block()
			}

		}
		{
			p.SetState(125)
			p.Match(SpartaParserT__5)
		}

	case 11:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(127)
			p.Match(SpartaParserT__13)
		}
		{
			p.SetState(128)
			p.Match(SpartaParserNAME)
		}
		{
			p.SetState(129)
			p.Match(SpartaParserT__1)
		}
		{
			p.SetState(130)
			p.exp(0)
		}
		{
			p.SetState(131)
			p.Match(SpartaParserT__14)
		}
		{
			p.SetState(132)
			p.exp(0)
		}
		p.SetState(135)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == SpartaParserT__14 {
			{
				p.SetState(133)
				p.Match(SpartaParserT__14)
			}
			{
				p.SetState(134)
				p.exp(0)
			}

		}
		{
			p.SetState(137)
			p.Match(SpartaParserT__4)
		}
		{
			p.SetState(138)
			p.Block()
		}
		{
			p.SetState(139)
			p.Match(SpartaParserT__5)
		}

	case 12:
		p.EnterOuterAlt(localctx, 12)
		{
			p.SetState(141)
			p.Match(SpartaParserT__13)
		}
		{
			p.SetState(142)
			p.Namelist()
		}
		{
			p.SetState(143)
			p.Match(SpartaParserT__15)
		}
		{
			p.SetState(144)
			p.Explist()
		}
		{
			p.SetState(145)
			p.Match(SpartaParserT__4)
		}
		{
			p.SetState(146)
			p.Block()
		}
		{
			p.SetState(147)
			p.Match(SpartaParserT__5)
		}

	case 13:
		p.EnterOuterAlt(localctx, 13)
		{
			p.SetState(149)
			p.Match(SpartaParserT__16)
		}
		{
			p.SetState(150)
			p.Funcname()
		}
		{
			p.SetState(151)
			p.Funcbody()
		}

	case 14:
		p.EnterOuterAlt(localctx, 14)
		{
			p.SetState(153)
			p.Match(SpartaParserT__17)
		}
		{
			p.SetState(154)
			p.Match(SpartaParserT__16)
		}
		{
			p.SetState(155)
			p.Match(SpartaParserNAME)
		}
		{
			p.SetState(156)
			p.Funcbody()
		}

	case 15:
		p.EnterOuterAlt(localctx, 15)
		{
			p.SetState(157)
			p.Match(SpartaParserT__17)
		}
		{
			p.SetState(158)
			p.Namelist()
		}
		p.SetState(161)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == SpartaParserT__1 {
			{
				p.SetState(159)
				p.Match(SpartaParserT__1)
			}
			{
				p.SetState(160)
				p.Explist()
			}

		}

	}

	return localctx
}

// IRetstatContext is an interface to support dynamic dispatch.
type IRetstatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRetstatContext differentiates from other interfaces.
	IsRetstatContext()
}

type RetstatContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRetstatContext() *RetstatContext {
	var p = new(RetstatContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SpartaParserRULE_retstat
	return p
}

func (*RetstatContext) IsRetstatContext() {}

func NewRetstatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RetstatContext {
	var p = new(RetstatContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SpartaParserRULE_retstat

	return p
}

func (s *RetstatContext) GetParser() antlr.Parser { return s.parser }

func (s *RetstatContext) Explist() IExplistContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExplistContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExplistContext)
}

func (s *RetstatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RetstatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RetstatContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.EnterRetstat(s)
	}
}

func (s *RetstatContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SpartaListener); ok {
		listenerT.ExitRetstat(s)
	}
}
